# singapore-budget-speeches

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
analysis/: README.md  country_extraction.py  export_for_web.py  keyword_discovery.py  linguistic_features.py  ministry_by_decade.csv  ministry_by_minister.csv  ministry_by_year.csv  ministry_topic_analysis.ipynb  ministry_topic_statistics.csv  ngram_analysis.py
docs/: README.md  about.html  global.html  index.html  language.html  ministers.html  ministries.html  search.html  topics.html  website_strategy.md
docs/assets/: app.js  global.js  language.js  ministers.js  ministries.js  search.js  style.css  topics.js
docs/data/: README.md
extractor/: README.md  speech_links.py
output/: 1960.md  1961.md  1962.md  1963.md  1964.md  1965.md  1966.md  1967.md  1968.md  1969.md  1970.md  1971.md  1972.md  1973.md  1974.md  1975.md  1976.md  1977.md  1978.md  1979.md  1980.md  1981.md  1982.md  1983.md  1984.md  1985.md  1986.md  1987.md  1988.md  1989.md  1990.md  1991.md  1992.md  1993.md  1994.md  1995.md  1996.md  1997.md  1998.md  1999.md  (+26 more)
output_markdown/: 1988.md  README.md
output_processor/: 1960.parquet  1961.parquet  1962.parquet  1963.parquet  1964.parquet  1965.parquet  1966.parquet  1967.parquet  1968.parquet  1969.parquet  1970.parquet  1971.parquet  1972.parquet  1973.parquet  1974.parquet  1975.parquet  1976.parquet  1977.parquet  1978.parquet  1979.parquet  1980.parquet  1981.parquet  1982.parquet  1983.parquet  1984.parquet  1985.parquet  1986.parquet  1987.parquet  1988.parquet  1989.parquet  1990.parquet  1991.parquet  1992.parquet  1993.parquet  1994.parquet  1995.parquet  1996.parquet  1997.parquet  1998.parquet  1999.parquet  (+28 more)
processor/: README.md  main.py  parser.py  processor.py  writer.py
(+14 files in other folders)
