[tool.poetry]
name = "singapore-budget-speeches"
version = "0.1.0"
description = "Extract and convert Singapore budget speeches from Hansard"
authors = ["jeremychia"]
readme = "README.md"
packages = [{include = "extractor"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pandas = "^2.2.0"
spacy = "^3.8.0"
pyarrow = "^18.0.0"
pyphen = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
